# qlibc

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePushCheckStateEx.cmake  INSTALL.md  config.cmake  config.cmake.in
include/qlibc/utilities/: qsocket.h
src/internal/: qfile_internal.h  qutil_internal.h
src/internal/compat/: strptime.c  strptime.h  timegm.c  timegm.h
src/ipc/: qsem.c
src/os/nix/internal/: qfile_internal.c  qutil_internal.c
src/os/nix/ipc/: qsem.c
src/os/nix/utilities/: qio.c
src/os/windows/internal/: qfile_internal.c  qutil_internal.c  win32_compat.c
src/os/windows/ipc/: qsem.c
src/os/windows/utilities/: qio.c
src/utilities/: qfile.c  qio.c  qstring.c  qsystem.c
tests/: CMakeLists.txt
tests/containers/: test_qvector.c
